--- a/StickyNotes.Web/Web.config
+++ b/StickyNotes.Web/Web.config
@@ -14,7 +14,8 @@
        AttachDbFilename=|DataDirectory|\aspnet-StickyNotes.Web.mdf;
        Integrated Security=True"
        providerName="System.Data.SqlClient" />
-	  <add name="StickyNotesEntities" connectionString="metadata=res://*/StickyNotesModel.csdl|res://*/StickyNotesModel.ssdl|res://*/StickyNotesModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ADRIAN\SQLEXPRESS;initial catalog=StickyNotes;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	  <!--->add name="StickyNotesEntities" connectionString="metadata=res://*/StickyNotesModel.csdl|res://*/StickyNotesModel.ssdl|res://*/StickyNotesModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ADRIAN\SQLEXPRESS;initial catalog=StickyNotes;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /-->
+	  <add name="StickyNotesEntities" connectionString="metadata=res://*/StickyNotesModel.csdl|res://*/StickyNotesModel.ssdl|res://*/StickyNotesModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=JGUILLEN\SQLEXPRESS;initial catalog=StickyNotes;user id=sa;password=Jguillen11.;encrypt=False;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
